--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,1 +1,2 @@
-
+PROJ_NAME = Contact management system
+SRC=src/project_main.c src/Contact management system.c src/test_contact management system.c src/unity.c
